Multiresolution modifier creates spikes when subdividing ngon meshes. #77261

Closed
opened 2020-06-02 01:46:41 +02:00 by Sekhar Ravinutala · 12 comments

System Information
Operating system: Linux-5.6.14-300.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits, Windows
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82

Blender Version
Broken: version: Bisected to 4542b50afc
Worked: version: Before 4542b50afc
Short description of error
Multiresolution modifier creates spikes when CC subdividing ngon meshes.

Exact steps for others to reproduce the error
Add cylinder or cone mesh, add multiresolution modifier on it, and subdivide with the default Catmull Clark (level 2-3 is enough to show the mess-up). See attached.
Occurs in both Object and Sculpt modes.
T82905_2.92_sculptmode_does_not_help.png

multires.blend


2.83.8 .blend
T829005_2.83_example.blend

**System Information** Operating system: Linux-5.6.14-300.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits, Windows Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.82 **Blender Version** Broken: version: Bisected to 4542b50afc Worked: version: Before 4542b50afc **Short description of error** Multiresolution modifier creates spikes when CC subdividing ngon meshes. **Exact steps for others to reproduce the error** Add cylinder or cone mesh, add multiresolution modifier on it, and subdivide with the default Catmull Clark (level 2-3 is enough to show the mess-up). See attached. Occurs in both Object and Sculpt modes. ![T82905_2.92_sculptmode_does_not_help.png](https://archive.blender.org/developer/F9357947/T82905_2.92_sculptmode_does_not_help.png) [multires.blend](https://archive.blender.org/developer/F8570709/multires.blend) --- 2.83.8 .blend [T829005_2.83_example.blend](https://archive.blender.org/developer/F9357779/T829005_2.83_example.blend)

Added subscriber: @Sekhar

Added subscriber: @Sekhar

#82905 was marked as duplicate of this issue

#82905 was marked as duplicate of this issue

#82487 was marked as duplicate of this issue

#82487 was marked as duplicate of this issue
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Added subscriber: @YAFU

Added subscriber: @YAFU

Added subscribers: @Mobin-2, @mano-wii, @lichtwerk

Added subscribers: @Mobin-2, @mano-wii, @lichtwerk
Member

Added subscribers: @Foaly, @EAW

Added subscribers: @Foaly, @EAW
Evan Wilson changed title from Multiresolution modifier messes up mesh to Multiresolution modifier creates spikes when subdividing ngon meshes. 2020-11-23 07:41:17 +01:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

@Sergey, Bisecting shows 4542b50afc to be the responsible commit.

@Sergey, Bisecting shows 4542b50afc to be the responsible commit.
Sergey Sharybin self-assigned this 2020-11-23 12:55:36 +01:00

I'll have a look.

I'll have a look.

This issue was referenced by 82cc21d5e4

This issue was referenced by 82cc21d5e4b62aa191726c4d9d89d5f53a2197f7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77261
No description provided.