source/blender/blenkernel/intern/multires_reshape_smooth.c
@@ -1154,8 +1154,11 @@ static void reshape_subdiv_evaluate_limit_at_grid(
                                               dPdu,
                                               dPdv);
 
+  const int face_index = multires_reshape_grid_to_face_index(reshape_context,
+                                                             grid_coord->grid_index);
   const int corner = multires_reshape_grid_to_corner(reshape_context, grid_coord->grid_index);
-  BKE_multires_construct_tangent_matrix(r_tangent_matrix, dPdu, dPdv, corner);
+  multires_reshape_tangent_matrix_for_corner(
+      reshape_context, face_index, corner, dPdu, dPdv, r_tangent_matrix);
 }
 
 /** \} */
